<resources>
    <string name="app_name">CinemaProject</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="poster_path">Poster Path</string>
    <string name="movie_name">movie name</string>
    <string name="movie_year">movie year</string>
    <string name="movie_description">movie description</string>
    <string name="like_button">Like Button</string>
    <string name="your_favorite_movies">Your Favorite Movies</string>
    <string name="long_press_to_delete_a_movie">long press to delete a movie</string>
    <string name="movie_app">Movie App</string>
    <string name="discover_the_latest_upcoming_movies_get_detailed_information_and_create_your_personalized_favorite_list">Discover the latest upcoming movies, get detailed information, and create your personalized favorite list.</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="register_account">Register Account</string>
    <string name="profile_image">Profile Image</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="login_account">Login Account</string>
    <string name="upcoming_movies">Upcoming movies</string>
    <string name="save_for_later">save for later</string>
    <string name="welcome_to_the_cinema_app">Welcome to the Cinema app!</string>
    <string name="show_now">Show Now</string>
    <string name="you_can_see_the_top_100_movies_worldwide_right_now">• You can see the top 100 movies worldwide right now</string>
    <string name="click_on_a_movie_to_view_details">• Click on a movie to view details</string>
    <string name="click_the_like_button_to_track_your_favorite_movies">• Click the LIKE button to track your favorite movies</string>
    <string name="long_click_to_delete_the_movie">• Long click to delete the movie</string>
    <string name="favorite_movies">Favorite Movies</string>
    <string name="manage_and_track_your_own_favorite_movies_list">• Manage and track your own favorite movies list</string>
    <string name="_100_most_popular_movies">100 most popular movies</string>
    <string name="right_now">right now</string>
    <string name="take_photo">Take photo</string>
    <string name="choose_from_gallery">Choose from Gallery</string>
    <string name="cancel">Cancel</string>
    <string name="choose_your_profile_picture">Choose your profile picture</string>
    <string name="delete_question">Are you sure you want to delete?</string>
    <string name="delete">Delete</string>



</resources>