<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/movie_app_background"
    android:gravity="top"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".Fragments.WelcomeFragment">

    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_margin="8dp"
        android:src="@drawable/movie_app_logo"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginBottom="15dp"
        android:text="@string/welcome_to_the_cinema_app"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/Show_now_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_background"
        android:padding="15dp"
        android:text="@string/show_now"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/you_can_see_the_top_100_movies_worldwide_right_now"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/click_on_a_movie_to_view_details"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/click_the_like_button_to_track_your_favorite_movies"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <Button
        android:id="@+id/Upcoming_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_background"
        android:padding="15dp"
        android:text="@string/upcoming_movies"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/long_click_to_delete_the_movie"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <Button
        android:id="@+id/Favorite_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_background"
        android:padding="15dp"
        android:text="@string/favorite_movies"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/manage_and_track_your_own_favorite_movies_list"
        android:textColor="@color/white"
        android:textSize="20sp" />
</LinearLayout>
